style: prevent layout shift on opening dialog modal

--- a/app/globals.css
+++ b/app/globals.css
@@ -145,3 +145,7 @@
 .ql-editor {
   padding: 0 !important;
 }
+
+body[data-scroll-locked][data-scroll-locked] {
+  margin-right: 0 !important;
+}
